refactor(common, executor): overhaul messaging interfaces and JSON handling
Replace `JsonMapper` with `JsonSerializer` for improved flexibility and clean code reuse across services.
Introduce `MessageQueueClient` and refactor `SqsClient` to implement it for a unified messaging interface.
Update `CommandMessageDto` and `StatusMessageDto` to leverage Lombok for boilerplate code reduction.
Enhance `SqsMessageConsumer` and `SqsMessagePublisher` to use `MessageQueueClient` and `JsonSerializer`, simplifying dependencies and improving testability.
Remove legacy `JsonMapper` for better alignment with the updated architecture.